--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <title>TicTacToe</title>
-<link rel="stylesheet" href="" th:href="@{style.css}" />
-<script type="" th:src="@{myjs.js}" defer></script>
+<link rel="stylesheet" href="" th:href="@{/style.css}" />
+<script type="" th:src="@{/myjs.js}" defer></script>
 </head>
 <body> 
 	<p class ="spielanzeige"></p>
